# Mailing_management_service

./: .env.sample  README.md  pyproject.toml
config/: settings.py
mailing/migrations/: 0001_initial.py  0002_initial.py
mailing/templates/mailing/: base.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_report.html  mailing_send.html  main_page.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html
mailing/templates/mailing/includes/: inc_menu.html
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_user_username.py  0003_remove_user_username.py
users/templates/: login.html
users/templates/users/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  password_reset_invalid.html  user_detail.html  user_form.html  user_update.html
