[tool.poetry]
name = "mailing-management-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.3"
python-dotenv = "^1.1.1"
psycopg2 = "^2.9.10"
pillow = "^11.2.1"
redis = "^6.2.0"
dotenv = "^0.9.9"
django-phonenumber-field = "^8.1.0"
django-phonenumbers = "^1.0.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"


[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
